<resources>
    <string name="app_name">Collsys</string>
    <string name="title_activity_main">ActivityMain</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="permission_dialog" />
    <string name="go_to_permissions_settings" />
    <string name="title_activity_assignment">ActivityAssignment</string>
    <string name="title_activity_daily_plan_visit">ActivityDailyPlanVisit</string>
    <string name="title_activity_detail_plan_visit">ActivityDetailPlanVisit</string>
    <string name="title_activity_input_kunjungan">ActivityInputKunjungan</string>
    <string name="title_activity_detail_inventory">ActivityDetailInventory</string>
    <string name="title_activity_historycal">ActivityHistorycal</string>
    <string name="title_activity_detail_historycal">ActivityDetailHistorycal</string>
    <string name="title_activity_maps_tracking">Map</string>
    <string name="input_diperlukan">Kolom harus diisi</string>
    <string name="password_salah">Format password salah (minimal 8 karakter dengan kombinasi huruf besar, kecil dan angka)</string>
    <string name="title_activity_ptp">ActivityPTP</string>
    <string name="title_activity_tes">Tes</string>
    <string name="title_activity_main_cek_root">MainActivityCekRoot</string>


    <string name="hello_world">Hello world!</string>
    <string name="action_github">Get on GitHub</string>
    <string name="action_info">info</string>
    <string name="info_details">This is a sample app for RootBeer - a simple to use root checking Android library. Rootbeer gives an indication of root. Remember root==god, so there\'s no 100% way to check for root.</string>

    <!--<string name="root_checks_1">Root Management Apps</string>
    <string name="root_checks_2">Potentially Dangerous Apps</string>
    <string name="root_checks_3">Test Keys</string>
    <string name="root_checks_4">BusyBox Binary</string>
    <string name="root_checks_5">Su Binary</string>
    <string name="root_checks_6">Su Exists</string>
    <string name="root_checks_7">RW Paths</string>
    <string name="root_checks_8">Dangerous Props</string>
    <string name="root_checks_9">Root Native</string>
    <string name="root_checks_10">Root Cloaking Apps</string>
    <string name="root_checks_11">Selinux Flag Enabled (experimental)</string>-->

    <string name="root_checks_1">ROOT MANAGEMENT APPS</string>
    <string name="root_checks_2">POTENTIALLY DANGEROUS APPS</string>
    <string name="root_checks_3">TEST KEYS</string>
    <string name="root_checks_4">BUSYBOX BINARY</string>
    <string name="root_checks_5">SU BINARY</string>
    <string name="root_checks_6">SU EXISTS</string>
    <string name="root_checks_7">RW PATHS</string>
    <string name="root_checks_8">DANGEROUS PROPS</string>
    <string name="root_checks_9">ROOT NATIVE</string>
    <string name="root_checks_10">ROOT CLOAKING APPS</string>
    <string name="root_checks_11">SELINUX FLAG ENABLED (EXPERIMENTAL)</string>
    <string name="ganti_password">GANTI PASSWORD</string>
    <string name="password_lama_default">Password Lama/Default</string>
    <string name="password_baru">Password Baru</string>
    <string name="ketik_ulang_password_baru">Ketik Ulang Password baru</string>
    <string name="kirim">kirim</string>
    <string name="bss_collection_system_ver_1_0_1">KSP - Colsys - Ver.0.0.2 </string>
    <string name="password">Password</string>
    <string name="user_name">User Name</string>
    <string name="sign_in">Sign In</string>
    <string name="welcome">Welcome</string>
    <string name="logobss">LogoBss</string>
    <string name="lupa_password">Lupa Password ?</string>
    <string name="login">Login</string>
    <string name="email_gmail_com">Email@gmail.com</string>
    <string name="user_name_user_id">User Name / User ID</string>
    <string name="confirmasi_user_id_user_name">Kondirmasi User ID </string>
    <string name="lupa_password1">Lupa Password</string>
    <string name="cancel">Batal</string>
    <string name="kirim1">Kirim</string>
    <string name="contact">Contact</string>
    <string name="titik2">:</string>
    <string name="call">call</string>
    <string name="close">close</string>
    <string name="simpan">simpan</string>
    <string name="phonenumber">080909xxxx</string>
    <string name="simpanass">simpanass</string>
    <string name="ptp_today">PTP Today</string>
    <string name="assignment">Assignment</string>
    <string name="no_visit">No Visit</string>
    <string name="photo_profile">Photo Profile</string>
    <string name="add_photo">Add Photo</string>
    <string name="save_image">Save Image</string>
    <string name="list_image">List Image</string>
    <string name="imagephoto">imagephoto</string>
    <string name="photo">Photo</string>
    <string name="alamat">Alamat</string>
    <string name="visit">Visit</string>
    <string name="contacted">Contacted</string>
    <string name="no_contacted">No Contacted</string>
    <string name="broken_promise">Broken Promise</string>
    <string name="keep_promise">Keep Promise</string>
    <string name="self_cured">Self Cured</string>
    <string name="back">Back</string>
    <string name="daily_plan_visit">Daily Plan Visit</string>
    <string name="detail_historical_penanganan">Detail Historical Penanganan</string>
    <string name="detail_account">Detail Account</string>
    <string name="historical_penanganan">Historical Penanganan</string>
    <string name="input_kunjungan">Input Kunjungan</string>
    <string name="ptp">PTP</string>
    <string name="collection_officer">Collection Officer</string>
    <string name="view_photo">view photo</string>
    <string name="foto_anggota">foto anggota</string>
    <string name="karakter_anggota">Karakter anggota</string>
    <string name="lokasi_bertemu">Lokasi Bertemu</string>
    <string name="nominal_bayar">Nominal Bayar</string>
    <string name="bertemu_dengan">Bertemu Dengan</string>
    <string name="hasil_kunjungan">Hasil Kunjungan</string>
    <string name="resume_anggota">Resume anggota</string>
    <string name="action_plan">Action Plan</string>
    <string name="action_plan_date">Action Plan Date</string>
    <string name="historical_restrukturisasi">Historical Restrukturisasi</string>
    <string name="restrukturisasi_ke">Restrukturisasi Ke</string>
    <string name="grace_period">Grace Period</string>
    <string name="jangka_waktu_grace_period">Jangka Waktu Grace Period</string>
    <string name="historical_surat_pemberitahuan_dan_peringatan">Historical Surat Pemberitahuan dan Peringatan</string>
    <string name="surat_pemberitahuan_ke">Surat Pemberitahuan Ke</string>
    <string name="tanggal_surat_pemberitahuan">Tanggal Surat Pemberitahuan</string>
    <string name="surat_peringatan_ke">Surat Peringatan ke</string>
    <string name="tanggal_surat_peringatan">Tanggal Surat Peringatan</string>
    <string name="historical_forclosure">Historical Forclosure</string>
    <string name="proses_forclosure">Proses Forclosure</string>
    <string name="status_forclosure">Status Forclosure</string>
    <string name="action_plan_forclosure">Action Plan Forclosure</string>
    <string name="target_date_action_plan_forclosure">Target Date Action Plan Forclosure</string>
    <string name="nama">Nama</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="no_telepon">No Telepon</string>
    <string name="alamat_rumah">Alamat Rumah</string>
    <string name="alamat_usaha">Alamat Usaha</string>
    <string name="jumlah_jaminan">Jumlah Jaminan</string>
    <string name="data_jaminan">Data Jaminan</string>
    <string name="no_cif">No Cif</string>
    <string name="no_rekening">No Rekening</string>
    <string name="ao_name">AO Name</string>
    <string name="cabang">Cabang</string>
    <string name="fasilitas">Fasilitas</string>
    <string name="plafond">Plafond</string>
    <string name="os">OS</string>
    <string name="booked">Booked</string>
    <string name="expired_promes">Expired Promes</string>
    <string name="expired_date">Expired Date</string>
    <string name="flag_probiz">Flag Probiz</string>
    <string name="action_plan_puk">Action Plan PUK</string>
    <string name="tujuan_visit">Tujuan Visit</string>
    <string name="upload_foto_jaminan">Upload foto Jaminan</string>
    <string name="perkiraan_perbaikan_bucket">Perkiraan Perbaikan Bucket</string>
    <string name="pihak_bank">Pihak KSP</string>
    <string name="nama_anggota">Nama Anggota</string>
    <string name="no_cif2">No.CIF</string>
    <string name="jika_alamat_rumah_tidak_sesuai">Jika Alamat Rumah Tidak Sesuai</string>
    <string name="alamat_usaha_tidak_sesuai">Alamat Usaha Tidak Sesuai</string>
    <string name="no_telepon2">No.Telepon</string>
    <string name="no_telephon">No Telephon</string>
    <string name="email">Email</string>
    <string name="email_tidak_sesuai">Email Tidak Sesuai</string>
    <string name="foto_document">foto Document</string>
    <string name="upload">Upload</string>
    <string name="uppload">uppload</string>
    <string name="keterangan21">Keterangan</string>
    <string name="pp">pp</string>
    <string name="xxxxxxxxx">xxxxxxxxx</string>
    <string name="name">Name</string>
    <string name="area">Area</string>
    <string name="jabatan">jabatan</string>
    <string name="status21">Status :</string>
    <string name="aktif">Aktif</string>
    <string name="performance_bulan_ini">Performance Bulan Ini</string>
    <string name="as">as</string>
    <string name="assignment21">Assignment</string>
    <string name="_0">0</string>
    <string name="vs">vs</string>
    <string name="visit21">Visit</string>
    <string name="no_visit21">No Visit</string>
    <string name="contacted21">Contacted</string>
    <string name="no_contacted21">No Contacted</string>
    <string name="self_cured2">self Cured</string>
    <string name="ptp_today21">PTP Today</string>
    <string name="bp">BP</string>
    <string name="kp">KP</string>
    <string name="keterangan">Keterangan</string>
    <string name="negatif_issue">Negatif Issue</string>
    <string name="ya">Ya</string>
    <string name="tidak">Tidak</string>
    <string name="action_plan21">Action Plan</string>
    <string name="target_date_action_plan">Target Date Action Plan</string>
    <string name="resume_anggota21">Resume anggota</string>
    <string name="detail_tunggakan">Detail Tunggakan</string>
    <string name="id">ID</string>
    <string name="installment_date">Installment Date</string>
    <string name="dpd">DPD</string>
    <string name="detail">Detail</string>
    <string name="total_tunggakan">TOTAL Tunggakan</string>
    <string name="total_due">TOTAL DUE</string>
    <string name="total_bayar">Total Bayar</string>
    <string name="batal">Batal</string>
    <string name="send">Send</string>
    <string name="ceklist">ceklist</string>
    <string name="search">Search</string>
    <string name="logout">Logout</string>
    <string name="daily_activities">Plan Visit</string>
    <string name="todo">TODO</string>
    <string name="notifikasi">Notifikasi</string>
    <string name="print">Print</string>
    <string name="settlement">Settlement</string>
    <string name="nomor_rekening">Rekening</string>
    <string name="saldo">Saldo</string>
    <string name="detail_fasilitas">Detail Fasilitas</string>
    <string name="account_number">Account Number</string>
    <string name="ld">LD</string>
    <string name="home">Home</string>
    <string name="confirmasi_email">Konfirmasi Email</string>
    <string name="no_rekanggota">No Rek</string>

</resources>