<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/white">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lupa_password1"
        android:gravity="center"
        android:textSize="35sp"
        android:textColor="@color/red"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"/>
    <View
        android:id="@+id/divider4"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/red" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textSize="15sp"
        android:text="@string/confirmasi_user_id_user_name"
        android:textColor="@color/Black"/>
    <EditText
        android:id="@+id/txtusername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textColor="@color/Black"
        android:textColorHint="@color/graydark"
        android:hint="@string/user_name_user_id"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textSize="15sp"
        android:text="@string/confirmasi_email"
        android:textColor="@color/Black"/>
    <EditText
        android:id="@+id/txtemail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textColor="@color/Black"
        android:hint="@string/email_gmail_com"
        android:textColorHint="@color/graydark"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">

        <Button
            android:id="@+id/btncancel"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:background="@drawable/rounded_background_strokred"
            android:text="@string/cancel"
            android:drawableStart="@drawable/batal"
            android:padding ="10dp"
            android:drawablePadding="10dp"/>
        <Button
            android:id="@+id/btnkirim"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:padding ="10dp"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/send"
            android:background="@drawable/rounded_background_strokred"
            android:layout_height="wrap_content"
            android:text="@string/kirim"/>
    </LinearLayout>





</LinearLayout>
