<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ActivityLogin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/logobss"
                android:src="@drawable/logoksp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">
            <!--<ImageView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:src="@drawable/welcome"/>-->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/welcome"
                android:textColor="@color/red"
                android:textSize="45sp"

                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="30dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                android:textColor="@color/red"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="50dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_background"
                android:hint="@string/user_name"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:textSize="20sp"
                android:contentDescription="@string/user_name"
                tools:ignore="Autofill,ContentDescription" />
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="20dp"
            app:passwordToggleDrawable="@drawable/selector"
            app:passwordToggleEnabled="true"
            app:hintEnabled="false">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:background="@drawable/rounded_background"
                android:ems="10"
                android:hint="@string/password"
                android:textColorHint="@color/graydark"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textSize="20sp"
                tools:ignore="Autofill" />
        </com.google.android.material.textfield.TextInputLayout>
        <!-- <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="50dp"
             android:layout_marginTop="30dp"
             android:layout_marginEnd ="50dp"
             android:orientation="vertical">
             <EditText
                 android:id="@+id/password"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/rounded_background"
                 android:padding="10dp"
                 android:hint="Password"
                 android:inputType="textPassword"
                 android:textSize="20dp"
                 />
         </LinearLayout>-->


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="50dp"
            android:orientation="vertical"
            android:baselineAligned="false">



            <LinearLayout
                android:layout_width="match_parent"
                android:paddingTop="20dp"
                android:paddingBottom="15dp"
                android:layout_height="wrap_content">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:background="@drawable/mybutton"
                    android:onClick="Login"
                    android:textSize="15sp" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="vertical"
                tools:ignore="RelativeOverlap">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="lupapassword"
                    android:textSize="15sp"
                    android:gravity="end"
                    android:text="@string/lupa_password"
                    android:textColor="@color/Black" />
            </LinearLayout>

            <!--<android.support.v7.widget.CardView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_alignParentEnd="true"-->
                <!--android:onClick="Login"-->
                <!--app:cardCornerRadius="10dp">-->

                <!--<ImageView-->
                    <!--android:layout_width="100dp"-->
                    <!--android:layout_height="40dp"-->
                    <!--android:src="@drawable/btnlogin"-->
                    <!--tools:ignore="ContentDescription" />-->
            <!--</android.support.v7.widget.CardView>-->


        </LinearLayout>


    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:padding="1dp"
        android:text="@string/bss_collection_system_ver_1_0_1"
        android:textAlignment="center"
        android:textColor="@color/red"
        android:textSize="14sp" />

</RelativeLayout>