<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ChangePassword">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/ly1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="61dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/logoksp"
                android:padding="10dp"
                android:contentDescription="@string/todo"
                tools:ignore="ContentDescription" />
            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ganti_password"
                    android:textStyle="bold"
                    android:textColor="@color/red"
                    android:textSize="30sp"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ly1"
            android:orientation="vertical">
            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleDrawable="@drawable/selector"
                app:passwordToggleEnabled="true">
                <EditText
                    android:id="@+id/psdold"
                    android:layout_margin="20dp"
                    android:background="@drawable/rounded_background_strokred"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:ems="10"
                    android:textSize="15sp"
                    android:padding="10dp"
                    android:hint="@string/password_lama_default"
                    android:textColor="@color/Black"
                    android:inputType="textPassword"
                    android:layout_marginBottom="20dp"
                    android:autofillHints=""
                    tools:targetApi="o" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleDrawable="@drawable/selector"
                app:passwordToggleEnabled="true"
                android:layout_centerHorizontal="true"
                tools:ignore="ObsoleteLayoutParam">
                <TextView
                    android:id="@+id/textinfo"
                    android:textColor="@color/Black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="15sp"/>
                <EditText
                    android:id="@+id/psdnew"
                    android:textSize="15sp"
                    android:layout_margin="20dp"
                    android:background="@drawable/rounded_background_strokred"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:ems="10"
                    android:padding="10dp"
                    android:hint="@string/password_baru"
                    android:textColor="@color/Black"
                    android:inputType="textPassword"
                    android:layout_marginBottom="20dp"
                    tools:ignore="Autofill" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleDrawable="@drawable/selector"
                app:passwordToggleEnabled="true"
                android:layout_centerHorizontal="true"
                tools:ignore="ObsoleteLayoutParam">

                <EditText
                    android:id="@+id/psdconfirm"
                    android:layout_margin="20dp"
                    android:textSize="15sp"
                    android:background="@drawable/rounded_background_strokred"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:ems="10"
                    android:padding="10dp"
                    android:hint="@string/ketik_ulang_password_baru"
                    android:textColor="@color/Black"
                    android:inputType="textPassword"
                    android:layout_marginBottom="20dp"
                    tools:ignore="Autofill" />
            </com.google.android.material.textfield.TextInputLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                tools:ignore="UselessLeaf">

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="20dp"
                tools:ignore="DisableBaselineAlignment">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    tools:ignore="UselessLeaf">

                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    tools:ignore="UselessLeaf">

                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">
                    <Button
                        android:id="@+id/kirim"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@drawable/rounded_background_strokgrey"
                        android:text="@string/kirim"
                        android:textColor="@color/white"/>
                </LinearLayout>

            </LinearLayout>


        </LinearLayout>
    </RelativeLayout>


</ScrollView>